# TemperatureAPI

tempAPI/: Cargo.toml
tempAPI/src/: lib.rs
